--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -9,6 +9,7 @@
     background: #2196F3;
     padding-left: 10px;
     padding-right: 10px;
+    z-index:99;
 
     .navbar-brand {
         width: 100px;
