--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -10,3 +10,7 @@ $line-height-base: 1.6;
 // Variables
 $primary-color: #2196F3;
 $secondary-color: #00bcd4;
+
+
+$primary:       $primary-color;
+$secondary:     $secondary-color;
