--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,21 @@
 // Variables
 @import 'variables';
-@import "reset";
+@import 'reset';
 @import "structure";
 @import "navbar";
 @import "buttons";
 @import "welcome-loader";
 @import "menu";
+
+@import "~bootstrap/scss/bootstrap-grid";
+@import "~bootstrap/scss/bootstrap-reboot";
+@import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/alert";
+@import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/images";
+@import "~bootstrap/scss/type";
+@import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/variables";
 
 .homepage {
     background-image: url('../img/map.png');
