--- a/resources/sass/_structure.scss
+++ b/resources/sass/_structure.scss
@@ -14,3 +14,8 @@ body {
 a {
     text-decoration: none;
 }
+
+.inner--icon, .inner--text {
+    display: inline-block;
+    vertical-align: middle;
+}
