--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 @import "buttons";
 @import "welcome-loader";
 @import "menu";
+@import "typo";
 
 @import "~bootstrap/scss/bootstrap-grid";
 @import "~bootstrap/scss/bootstrap-reboot";
@@ -17,8 +18,15 @@
 @import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/variables";
 
-.homepage {
-    background-image: url('../img/map.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+
+.ride-list{
+
+
+    &__item{
+        padding: 10px;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        background: #ffffff;
+    }
 }
