--- a/resources/sass/_menu.scss
+++ b/resources/sass/_menu.scss
@@ -86,12 +86,8 @@
     }
 
     &__dropdown-menu-svg {
-        padding-right: 16px;
-
-        .header--icon {
-            width: 1.40rem;
-            height: 1.40rem;
-        }
+        padding-right: 10px;
+        width: 40px;
     }
 }
 
