--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,3 +49,75 @@
         color: grey;
     }
 }
+
+.user-trip-list {
+    list-style: none;
+    font-weight: bold;
+
+    li {
+        display: flex;
+        align-items: center;
+    }
+
+}
+
+.avatar {
+    width: 32px;
+    height: 32px;
+    min-width: 32px;
+    display: inline-block;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    margin-right: 10px;
+}
+
+.comment {
+    margin-bottom: 10px;
+    display: flex;
+    .avatar{
+        align-self: flex-end;
+    }
+    &.my-comment {
+        flex-direction: row-reverse;
+        .avatar{
+            margin-left: 10px;
+            margin-right: 0;
+        }
+        .chat {
+            background: $primary-color;
+            color: #fff;
+        }
+    }
+
+    .chat {
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        background-color: #fff;
+        padding: 10px;
+
+    }
+}
+
+.comment-text-box{
+    display: flex;
+    input{
+        width: 100%;
+        height: 50px;
+        padding: 10px;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+        border: 1px solid #e2e2e2;
+    }
+    button{
+        background: $primary-color;
+        color: #fff;
+        border: none;
+        height: 50px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        width: 60px;
+
+    }
+}
